TAG: vocload-tr6839-4
DATE: 06/23/2010
STAFF: sc
CHANGES: Only merge terms when oldKey != newKey

TAG: vocload-tr6839-3
DATE: 06/01/2010
STAFF: sc
CHANGES: Removed MTO.config MTO.rcd
 replaced with MCV.config MCV.rcd 

TAG: vocload-tr6839-2
DATE: 05/17/2010
STAFF: sc
CHANGES: Removed SO.config SO.rcd
    Some commenting changes in other config files
    to make things clearer.

TAG: vocload-tr6839-1
DATE: 04/29/2010
STAFF: sc
CHANGES:
1) add: SO.config, SO.rcd, MTO.config MTO.rcd
2) OBOParser.py - parse subset and add to term object
3) OBOTerm.py - add subset variable and methods
4) loadDAG.py - added some debug including passing log
   to getClosure method.
   NOTE: need to remove some
   commented out debug prior to merging to trunk
5) loadOBO.py - Added Sequence Ontology special handling (as for GO)
   for obsoletes etc, added subset processing, change DAG_CHILD_LABEL
   constant to dag_child_label variable; for SO only this value may
   come from obo file (i.e. not always 'Not Specified')
   NOTE: need to remove some
   commented out debug prior to merging to trunk
6) loadTerms.py -  comments only

TAG: vocload-tr6839-BP
DATE: 04/29/2010
STAFF: sc
CHANGES: Branch Point tag for TR6839 Marker Types

TAG: vocload-4-3-1-2
DATE: 09/01/2009
STAFF: lec
CHANGES:
2) fix MouseCyc.config "lec" to "mgiadmin"

TAG: vocload-4-3-1-1
DATE: 08/12/2009
STAFF: lec
CHANGES:
1) TR9461/OMIMtermcheck.py, OMIM.config, OMIMindex.html, OMIM.setup

TAG: vocload-4-1-3-4
DATE: 12/30/2008
STAFF: lec
CHANGES:
1) TR9434/new OMIM load QC report; OMIMtermcheck.py, OMIM.config, OMIMindex.html

TAG: vocload-4-1-3-3
DATE: 10/17/2008
STAFF: dbm
CHANGES:
1) TR9206/Tweaks to Install script

TAG: vocload-4-1-3-2
TAG: vocload-4-1-3-1
DATE: 10/16/2008
STAFF: lec
CHANGES:
1) TR9206/see mousecycload

TAG: vocload-3-5-2-2
DATE: 02/27/2008
STAFF: lec
CHANGES:
1) TR8828, OMIM.transaction update/fix
   also added OMIM.exclude, OMIM.synonym to cvs

TAG: vocload-3-5-2-1
DATE: 3/19/2007
STAFF: dbm
CHANGES: